# SlicerGitSVNArchive

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  CTestConfig.cmake  Doxyfile  README.txt  SuperBuild.cmake  circle.yml  requirements-docs.txt
.circleci/: config.yml
Base/Logic/Resources/: CMakeLists.txt
Base/Logic/Resources/ColorFiles/Terminology/: AnatomicRegionAndModifier.xml  GenericAnatomyColors-SNOMED.csv  SegmentationCategoryTypeModifier.xml
Extensions/CMake/Testing/TestExtA/: CMakeLists.txt
Extensions/CMake/Testing/TestExtA/ModA/: CMakeLists.txt  ModA.py
Extensions/CMake/Testing/TestExtC/: CMakeLists.txt
Extensions/CMake/Testing/TestExtC/ModC/: CMakeLists.txt  ModC.py
Extensions/Testing/CLIExtensionTemplate/CLIModuleTemplatePython/: CLIModuleTemplatePython.py  CLIModuleTemplatePython.xml  CMakeLists.txt
Extensions/Testing/PythonCLIExtensionTemplate/: CMakeLists.txt
Extensions/Testing/PythonCLIExtensionTemplate/PythonCLIModuleTemplate/: CMakeLists.txt
Modules/CLI/DicomToNrrdConverter/: CMakeLists.txt  DCMTKFileReader.h  DicomToNrrdConverter.cxx  DicomToNrrdConverter.xml  StringContains.h
Modules/CLI/DicomToNrrdConverter/ExtendedTesting/: CMakeLists.txt
Modules/CLI/DicomToNrrdConverter/ExtendedTesting/keys/: SiemensTrio-Syngo2004A-1.md5  SiemensTrio-Syngo2004A-1.nrrd.md5  SiemensTrio-Syngo2004A-2.md5  SiemensTrio-Syngo2004A-2.nrrd.md5
Modules/CLI/ExtractSkeleton/Testing/: CMakeLists.txt
Modules/CLI/RobustStatisticsSegmenter/: CMakeLists.txt  RobustStatisticsSegmenter.cxx  RobustStatisticsSegmenter.xml  SFLSRobustStatSegmentor3DLabelMap.h  SFLSRobustStatSegmentor3DLabelMap.hxx  SFLSRobustStatSegmentor3DLabelMap_single.h  SFLSRobustStatSegmentor3DLabelMap_single.txx  SFLSSegmentor3D.h  SFLSSegmentor3D.hxx  SFLSSegmentor3D.txx  labelMapPreprocessor.h  vtkITKRSSegmenter.cxx  vtkITKRSSegmenter.h
Modules/CLI/RobustStatisticsSegmenter/Testing/: SFLSRobustStat3DTestConsole.cxx
Modules/Loadable/Markups/MRML/: CMakeLists.txt  vtkCurveGenerator.cxx  vtkMRMLMarkupsAngleNode.cxx  vtkMRMLMarkupsAngleNode.h  vtkMRMLMarkupsClosedCurveNode.cxx  vtkMRMLMarkupsClosedCurveNode.h  vtkMRMLMarkupsCurveNode.cxx  vtkMRMLMarkupsCurveNode.h  vtkMRMLMarkupsDisplayNode.cxx  vtkMRMLMarkupsDisplayNode.h  vtkMRMLMarkupsFiducialNode.cxx  vtkMRMLMarkupsFiducialNode.h  vtkMRMLMarkupsFiducialStorageNode.cxx  vtkMRMLMarkupsGenericStorageNode.cxx  vtkMRMLMarkupsGenericStorageNode.h  vtkMRMLMarkupsLineNode.cxx  vtkMRMLMarkupsLineNode.h  vtkMRMLMarkupsNode.cxx  vtkMRMLMarkupsNode.h  vtkMRMLMarkupsPlaneNode.cxx  vtkMRMLMarkupsPlaneNode.h
Modules/Loadable/RSSLoadableModule/: CMakeLists.txt  qSlicerRSSLoadableModuleModule.cxx  qSlicerRSSLoadableModuleModule.h  qSlicerRSSLoadableModuleModuleWidget.cxx  qSlicerRSSLoadableModuleModuleWidget.h
Modules/Loadable/RSSLoadableModule/Logic/: CMakeLists.txt  vtkITKRSSegmenter.cxx  vtkITKRSSegmenter.h  vtkSlicerRSSLoadableModuleLogic.cxx  vtkSlicerRSSLoadableModuleLogic.h
Modules/Loadable/RSSLoadableModule/Resources/: qSlicerRSSLoadableModuleModule.qrc
Modules/Loadable/RSSLoadableModule/Resources/UI/: qSlicerRSSLoadableModuleModule.ui
Modules/Scripted/: CMakeLists.txt
Modules/Scripted/DICOM/: DICOM.py
Modules/Scripted/DICOM/DICOMLib/: DICOMPlugin.py  DICOMWidgets.py
Modules/Scripted/DICOMLib/: CMakeLists.txt  DICOMExportScalarVolume.py  DICOMExportScene.py  DICOMPlugin.py  DICOMProcesses.py  DICOMUtils.py  DICOMWidgets.py
Modules/Scripted/DICOMLib/Logic/: vtkSlicerDICOMExportable.cxx  vtkSlicerDICOMExportable.h  vtkSlicerDICOMLoadable.cxx  vtkSlicerDICOMLoadable.h
Modules/Scripted/DICOMLib/SubjectHierarchyPlugins/: qSlicerSubjectHierarchyDICOMPlugin.cxx  qSlicerSubjectHierarchyDICOMPlugin.h
Modules/Scripted/DICOMLib/Testing/: CMakeLists.txt  DICOMBrowserTest.py
Modules/Scripted/DICOMLib/Widgets/: qSlicerDICOMExportDialog.cxx  qSlicerDICOMExportDialog.h  qSlicerDICOMExportable.cxx  qSlicerDICOMExportable.h  qSlicerDICOMLoadable.h  qSlicerDICOMTagEditorWidget.cxx  qSlicerDICOMTagEditorWidget.h
Modules/Scripted/DICOMPlugins/: DICOMDiffusionVolumePlugin.py  DICOMScalarVolumePlugin.py  DICOMSlicerDataBundlePlugin.py
Modules/Scripted/DMRIInstall/: DMRIInstall.py
Modules/Scripted/DataProbe/: CMakeLists.txt  DataProbe.py
Modules/Scripted/DataProbe/DataProbeLib/: SliceViewAnnotations.py  __init__.py
Modules/Scripted/DataProbe/Logic/: vtkPVScalarBarActor.cxx  vtkPVScalarBarActor.h
Modules/Scripted/Editor/: Editor.py
Modules/Scripted/EditorLib/: CMakeLists.txt  EditBox.py  EditUtil.py  GrowCutEffect.py  HelperBox.py  LabelStructureListWidget.py  RectangleEffect.py  __init__.py
Modules/Scripted/EditorLib/Logic/: vtkImageConnectivity.cxx  vtkImageConnectivity.h  vtkImageErode.cxx  vtkImageErode.h  vtkImageFillROI.cxx  vtkImageLabelChange.cxx  vtkImageLabelChange.h  vtkImageSlicePaint.cxx  vtkImageSlicePaint.h  vtkImageStash.cxx  vtkImageStash.h  vtkPichonFastMarching.cxx  vtkPichonFastMarching.h  vtkPichonFastMarchingPDF.cxx  vtkPichonFastMarchingPDF.h
Modules/Scripted/EditorLib/Testing/: ThresholdThreadingTest.py
Modules/Scripted/Endoscopy/: Endoscopy.py
Modules/Scripted/ExtensionWizard/: ExtensionWizard.py
Modules/Scripted/ExtensionWizard/ExtensionWizardLib/: CreateComponentDialog.py
Modules/Scripted/FiberBundleToLabelMap/: FiberBundleToLabelMap.py
Modules/Scripted/LabelStatistics/: LabelStatistics.py
Modules/Scripted/SampleData/: SampleData.py
Modules/Scripted/ScreenCapture/: ScreenCapture.py
Modules/Scripted/Scripts/DICOMPlugins/: DICOMScalarVolumePlugin.py
Modules/Scripted/SegmentEditor/: CMakeLists.txt  SegmentEditor.py
Modules/Scripted/SegmentEditor/SegmentEditorSubjectHierarchyPlugins/: __init__.py
Modules/Scripted/SegmentStatistics/: CMakeLists.txt  SegmentStatistics.py
Modules/Scripted/SegmentStatistics/SegmentStatisticsSubjectHierarchyPlugins/: CMakeLists.txt
Modules/Scripted/SegmentStatistics/SubjectHierarchyPlugins/: __init__.py
Modules/Scripted/SurfaceToolbox/: SurfaceToolbox.py
Modules/Scripted/VectorToScalarVolume/: VectorToScalarVolume.py
(+2618 files in other folders)
